# app/internal/handler/auth.go
@@ -21,6 +21,7 @@ import (
 // @Failure 400 {object} model.ErrorResponse
 // @Failure 401 {object} model.ErrorResponse
 // @Router /api/v1/auth/login [post]
+// @Param Accept-Language header string false "Tilni belgilash uchun (masalan: uz,de)" default(uz) 
 func (h *Handler) Login(c echo.Context) error {
 	var req model.LoginRequest
 	if v := c.Get("loginBody"); v != nil {
@@ -95,6 +96,8 @@ func (h *Handler) RegisterUser(c echo.Context) error {
 // @Success 200 {object} model.RefreshResponse
 // @Failure 401 {object} model.ErrorResponse
 // @Router /api/v1/auth/refresh [post]
+// @Param Accept-Language header string false "Tilni belgilash uchun (masalan: uz,de)" default(uz) 
+
 func (h *Handler) Refresh(c echo.Context) error {
 	var req model.RefreshRequest
 	if v := c.Get("refreshBody"); v != nil {
@@ -132,6 +135,8 @@ func (h *Handler) Refresh(c echo.Context) error {
 // @Failure 400 {object} model.ErrorResponse
 // @Failure 401 {object} model.ErrorResponse
 // @Router /api/v1/auth/login/with-google [post]
+// @Param Accept-Language header string false "Tilni belgilash uchun (masalan: uz,de)" default(uz) 
+
 func (h *Handler) RegisterWithGoogle(c echo.Context) error {
 	req := new(model.GoogleAuthRequest)
 
